--- a/VidArchiverUI.ui
+++ b/VidArchiverUI.ui
@@ -618,7 +618,7 @@ alternate-background-color: rgb(255, 226, 176);</string>
    <widget class="QLabel" name="lbl_version">
     <property name="geometry">
      <rect>
-      <x>1210</x>
+      <x>1250</x>
       <y>40</y>
       <width>161</width>
       <height>16</height>
@@ -626,6 +626,9 @@ alternate-background-color: rgb(255, 226, 176);</string>
     </property>
     <property name="text">
      <string>VersionsInfo</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
    <widget class="QLabel" name="label">
@@ -639,6 +642,22 @@ alternate-background-color: rgb(255, 226, 176);</string>
     </property>
     <property name="text">
      <string>&lt;---  technische Info: F2   ---&gt;</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="lbl_db">
+    <property name="geometry">
+     <rect>
+      <x>1250</x>
+      <y>60</y>
+      <width>161</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>DB-Info</string>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
   </widget>
