--- a/VidArchiverUI.ui
+++ b/VidArchiverUI.ui
@@ -159,15 +159,15 @@ alternate-background-color: rgb(170, 255, 127);</string>
          <widget class="QPushButton" name="btn_delPrep">
           <property name="geometry">
            <rect>
-            <x>11</x>
+            <x>10</x>
             <y>21</y>
-            <width>130</width>
+            <width>101</width>
             <height>23</height>
            </rect>
           </property>
           <property name="minimumSize">
            <size>
-            <width>130</width>
+            <width>101</width>
             <height>0</height>
            </size>
           </property>
@@ -178,27 +178,40 @@ alternate-background-color: rgb(170, 255, 127);</string>
          <widget class="QPushButton" name="btn_renamePrep">
           <property name="geometry">
            <rect>
-            <x>150</x>
+            <x>130</x>
             <y>20</y>
-            <width>130</width>
+            <width>100</width>
             <height>23</height>
            </rect>
           </property>
           <property name="text">
-           <string>&amp;umbenennen - F6</string>
+           <string>umbenenn. - F6</string>
           </property>
          </widget>
          <widget class="QPushButton" name="btn_showPrepVideo">
           <property name="geometry">
            <rect>
-            <x>288</x>
-            <y>21</y>
-            <width>130</width>
+            <x>250</x>
+            <y>20</y>
+            <width>100</width>
             <height>23</height>
            </rect>
           </property>
           <property name="text">
            <string>&amp;zeigen - F3</string>
+          </property>
+         </widget>
+         <widget class="QPushButton" name="btn_QInfo">
+          <property name="geometry">
+           <rect>
+            <x>360</x>
+            <y>20</y>
+            <width>100</width>
+            <height>24</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>tech.Inf - F2</string>
           </property>
          </widget>
         </widget>
@@ -392,8 +405,8 @@ alternate-background-color: rgb(255, 226, 176);</string>
          <widget class="QPushButton" name="btn_del">
           <property name="geometry">
            <rect>
-            <x>11</x>
-            <y>21</y>
+            <x>3</x>
+            <y>20</y>
             <width>130</width>
             <height>23</height>
            </rect>
@@ -411,9 +424,9 @@ alternate-background-color: rgb(255, 226, 176);</string>
          <widget class="QPushButton" name="btn_rename">
           <property name="geometry">
            <rect>
-            <x>150</x>
-            <y>20</y>
-            <width>130</width>
+            <x>142</x>
+            <y>19</y>
+            <width>100</width>
             <height>23</height>
            </rect>
           </property>
@@ -424,14 +437,27 @@ alternate-background-color: rgb(255, 226, 176);</string>
          <widget class="QPushButton" name="btn_showArchVideo">
           <property name="geometry">
            <rect>
-            <x>288</x>
-            <y>21</y>
-            <width>130</width>
+            <x>250</x>
+            <y>20</y>
+            <width>100</width>
             <height>23</height>
            </rect>
           </property>
           <property name="text">
            <string>&amp;zeigen</string>
+          </property>
+         </widget>
+         <widget class="QPushButton" name="btn_ZInfo">
+          <property name="geometry">
+           <rect>
+            <x>360</x>
+            <y>20</y>
+            <width>100</width>
+            <height>24</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string>tech.Info</string>
           </property>
          </widget>
         </widget>
@@ -508,6 +534,16 @@ alternate-background-color: rgb(255, 226, 176);</string>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="styleSheet">
+        <string notr="true">color:  rgb(255, 255, 127);
+background-color:  DarkSlateGray;
+border-style: outset;
+border-width: 1px;
+border-radius: 5px;
+border-color: black;        
+padding: 3px;
+</string>
+       </property>
        <property name="text">
         <string>Video &amp;in den  Pfad einsortieren - F5</string>
        </property>
@@ -523,7 +559,7 @@ alternate-background-color: rgb(255, 226, 176);</string>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>240</width>
+         <width>180</width>
          <height>20</height>
         </size>
        </property>
@@ -539,12 +575,47 @@ alternate-background-color: rgb(255, 226, 176);</string>
        </property>
        <property name="minimumSize">
         <size>
-         <width>200</width>
+         <width>150</width>
          <height>0</height>
         </size>
        </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 253, 166);</string>
+       </property>
        <property name="text">
-        <string>neuer Unterordner</string>
+        <string>neuer Ordner</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_pfadRen">
+       <property name="minimumSize">
+        <size>
+         <width>150</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 253, 166);</string>
+       </property>
+       <property name="text">
+        <string>Ordner umbenennen</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="btn_pfadDel">
+       <property name="minimumSize">
+        <size>
+         <width>150</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">background-color: rgb(255, 253, 166);</string>
+       </property>
+       <property name="text">
+        <string>Ordner löschen</string>
        </property>
       </widget>
      </item>
@@ -555,7 +626,7 @@ alternate-background-color: rgb(255, 226, 176);</string>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>60</width>
+         <width>80</width>
          <height>20</height>
         </size>
        </property>
@@ -568,6 +639,16 @@ alternate-background-color: rgb(255, 226, 176);</string>
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">color:  rgb(255, 255, 127);
+background-color: darkSlateGray;
+border-style: outset;
+border-width: 1px;
+border-radius: 5px;
+border-color: black;        
+padding: 3px;
+</string>
        </property>
        <property name="text">
         <string>Video zuzück in die Quelle - Shift+F5</string>
@@ -584,7 +665,7 @@ alternate-background-color: rgb(255, 226, 176);</string>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
-         <width>120</width>
+         <width>100</width>
          <height>20</height>
         </size>
        </property>
@@ -631,19 +712,6 @@ alternate-background-color: rgb(255, 226, 176);</string>
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>600</x>
-      <y>760</y>
-      <width>161</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>&lt;---  technische Info: F2   ---&gt;</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="lbl_db">
     <property name="geometry">
      <rect>
@@ -667,7 +735,7 @@ alternate-background-color: rgb(255, 226, 176);</string>
      <x>0</x>
      <y>0</y>
      <width>1441</width>
-     <height>21</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
